# reflections-api

./: .gitignore  .replit  Database.py  README.md  db.py  index.py  main.py  pyproject.toml  vercel.json
static/: BigBook.csv  DailyReflections.csv
templates/: home.html
