[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["ShawnKBeck <48632060+ShawnKBeck@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
jinja2 = "^3.1.4"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
